# sscg

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .packit.yaml  .packit_BACKUP_333494.yaml  .packit_REMOTE_333494.yaml  .travis.yml  CONTRIBUTING.md  COPYING  Changelog.md  Dockerfile  Dockerfile.deps  LICENSE  Makefile.am  README.md  authority.go  certificate.go  config.h.in  configure.ac  file.go  meson.build  meson_options.txt  python-sscg.spec  release.sh  service.go  setup.py  sscg.go  sscg.spec  types.go  version.m4
.ci/: coverity_prep.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  test-setup.sh
.distro/: .gitignore  README.packit  changelog  gating.yaml  get_current_version.sh  source-git.yaml  sscg.spec
.distro/plans/: tier1-public.fmf  tier2-public.fmf
.distro/test/help-usage/: Makefile  README.rst  runtask.yml  runtest.sh
.github/workflows/: ci-arm64.yaml  ci.yaml  codeql-analysis.yml  formatters.yaml  macos.yaml  upstreamed.yaml
.travis/: coverity_prep.sh  get_rawhide_version.py  retry-command.sh  travis-centos.sh  travis-centos7.sh  travis-common.inc  travis-coverity.sh  travis-docker-build.sh  travis-fedora.sh  travis-tasks.sh  travis.sh
.travis/centos/: Dockerfile.deps.tmpl  Dockerfile.tmpl
.travis/centos7/: Dockerfile.deps.tmpl  Dockerfile.tmpl  travis-tasks.sh
.travis/coverity/: Dockerfile-8  Dockerfile.tmpl  travis-tasks.sh
.travis/fedora/: Dockerfile.deps.tmpl  Dockerfile.tmpl  travis-tasks.sh
Godeps/: Godeps.json
include/: authority.h  bignum.h  cert.h  certificate.h  dhparams.h  io_utils.h  key.h  logging.h  options.h  service.h  sscg.h  x509.h
m4/: crypto.m4  libpath_utils.m4
packaging/debian/: changelog  control  copyright  rules  watch
packaging/fedora/: sscg.spec
po/: LINGUAS  POTFILES.in  meson.build  sscg.pot
src/: arguments.c  authority.c  bignum.c  cert.c  certificate.c  dhparams.c  io_utils.c  key.c  logging.c  options.c  service.c  sscg.c  x509.c
src/sscg/: LICENSE  __init__.py  authority.py  main.py  service.py
test/: argument_parser_test.c  create_ca_test.c  create_cert_test.c  create_csr_test.c  dhparams_test.c  generate_ec_key_test.c  generate_mldsa_key_test.c  generate_rsa_key_test.c  generate_serial_test.c  hostname_validation_test.c  init_bignum_test.c  named_dhparams_test.c  test_cert_validity.sh  test_dhparams_creation.sh  test_ecdsa_cert_validity.sh  test_expected_failure.sh  test_file_overwrite.sh  test_io_utils.c  test_missing_arg.sh  test_mldsa_cert_validity.sh
