# This file is part of sscg.
#
# sscg is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# sscg is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with sscg.  If not, see <http://www.gnu.org/licenses/>.
#
# Copyright 2025 by Stephen Gallagher <sgallagh@redhat.com>

# i18n.gettext() handles the setup of .pot/.po/.mo files
# and installation of translated message catalogs
i18n.gettext(
  'sscg',
  preset: 'glib',
  args: [
    '--keyword=_',
    '--keyword=N_',
    '--from-code=UTF-8',
  ]
) 